# echo-mate

./: CMakeLists.txt  main.c  toolchain.cmake
common/: CMakeLists.txt
common/gpio_manager/: gpio_manager.h
flower_app/: CMakeLists.txt  flower_ui.c  flower_ui.h
flower_app/common/flower_page_manager/: flower_page_manager.c  flower_page_manager.h
flower_app/common/flower_time_manager/: flower_time_manager.c  flower_time_manager.h
flower_app/fonts/: ui_font_NuberBig90.c  ui_font_heiti14.c  ui_font_heiti22.c  ui_font_heiti24.c  ui_font_iconfont20.c  ui_font_iconfont26.c  ui_font_iconfont30.c  ui_font_iconfont36.c  ui_font_iconfont44.c  ui_font_iconfont48.c  ui_font_shuhei22.c
flower_app/images/: ui_img_calendar64_png.c  ui_img_clouds_png.c  ui_img_gamememory64_png.c  ui_img_hand60_png.c  ui_img_memo64_png.c  ui_img_muyu128_png.c  ui_img_paint60_png.c  ui_img_question60_png.c  ui_img_sun_png.c  ui_img_think60_png.c  ui_img_weather64_png.c
flower_app/pages/flower_echo_page/: flower_echo_page.c  flower_echo_page.h
flower_app/pages/flower_home_page/: flower_home_page.c  flower_home_page.h
flower_app/pages/flower_led_page/: flower_led_page.c  flower_led_page.h
flower_app/pages/flower_weather_page/: flower_weather_app.c  flower_weather_app.h  flower_weather_page.c  flower_weather_page.h
gui_app/: ui.c
gui_app/common/page_manager/: lv_lib_pm.c  lv_lib_pm.h
gui_app/common/stack/: lv_lib_stack.c  lv_lib_stack.h
gui_app/pages/ui_WeatherPage/: app_WeatherPage.c
